# Burrito

./: README.md  settings.gradle
artceleration_app/: build.gradle  proguard-rules.pro
artceleration_app/src/androidTest/java/edu/asu/msrs/artceleration/: ExampleInstrumentedTest.java
artceleration_app/src/androidTest/java/edu/dartmouth/cs65/jnidemo/: ExampleInstrumentedTest.java
artceleration_app/src/main/: AndroidManifest.xml
artceleration_app/src/main/cpp/: native-lib.cpp
artceleration_app/src/main/java/edu/asu/msrs/artceleration/: ArtView.java  MainViewer.java  Util.java  testArtTransformQueue.java
artceleration_app/src/main/java/edu/dartmouth/cs65/jnidemo/: ArtView.java  MainViewer.java  Util.java
artceleration_app/src/main/res/drawable/: ic_local_restaurant_24dp.xml  ic_map_24dp.xml  ic_store_mall_directory_24dp.xml
artceleration_app/src/main/res/layout/: activity_main_viewer.xml  sample_art_view.xml
artceleration_app/src/main/res/values/: dimens.xml  strings.xml  styles.xml
artceleration_app/src/main/res/values-v21/: styles.xml
artceleration_app/src/test/java/edu/asu/msrs/artceleration/: ExampleUnitTest.java
artceleration_app/src/test/java/edu/dartmouth/cs65/jnidemo/: ExampleUnitTest.java
artcelerationlibrary/: CMakeLists.txt  build.gradle
artcelerationlibrary/src/androidTest/java/edu/asu/msrs/artcelerationlibrary/: ExampleInstrumentedTest.java
artcelerationlibrary/src/androidTest/java/edu/dartmouth/cs65/artcelerationlibrary/: ExampleInstrumentedTest.java
artcelerationlibrary/src/main/: AndroidManifest.xml
artcelerationlibrary/src/main/c/: Android.mk  NativeImageProcessor.cpp  artTransform-lib.c  neon-intrinsics.c  neon-intrinsics.h  neon.c
artcelerationlibrary/src/main/java/edu/asu/msrs/artcelerationlibrary/: ArtLib.java  MemoryFileUtil.java  TransformHandler.java  TransformTest.java
artcelerationlibrary/src/main/java/edu/asu/msrs/artcelerationlibrary/artcelerationService/: ArtTransformHandler.java  ArtTransformService.java  ArtTransformTaskCallable.java  ArtTransformThread.java  ArtTransformThreadPool.java  ConvolutionMatrix.java  FastBlur.java  GaussianBlur.java  UiThreadCallback.java  Util.java
artcelerationlibrary/src/main/java/edu/dartmouth/cs65/artcelerationlibrary/: ArtLib.java  MemoryFileUtil.java  TransformHandler.java  TransformTest.java
artcelerationlibrary/src/main/java/edu/dartmouth/cs65/artcelerationlibrary/artcelerationService/: ArtTransformHandler.java  ArtTransformService.java  ArtTransformTaskCallable.java  ArtTransformThread.java  GaussianBlur.java  Util.java
artcelerationlibrary/src/main/res/layout/: sample_art_view.xml
artcelerationlibrary/src/main/res/values/: attrs_art_view.xml  strings.xml
artcelerationlibrary/src/test/java/edu/asu/msrs/artcelerationlibrary/: ExampleUnitTest.java
artcelerationlibrary/src/test/java/edu/dartmouth/cs65/artcelerationlibrary/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
